# rc_reason_clients_ros2

./: .gitignore  .gitlab-ci.yml  README.md
rc_reason_clients/: .gitignore  CHANGELOG.rst  README.md  package.xml  setup.cfg  setup.py
rc_reason_clients/protos/: image_interface.proto
rc_reason_clients/rc_reason_clients/: cadmatch.py  custom_mappings.py  hand_eye_calib.py  image_event_client.py  load_carrier.py  message_conversion.py  pick.py  rest_client.py  ros_loader.py  silhouettematch.py  tagdetect.py  transform_helpers.py
rc_reason_clients/test/: test_mappings.py
rc_reason_msgs/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
rc_reason_msgs/msg/: DetectedTag.msg  Grasp.msg  ImageEvent.msg  Item.msg  ItemModel.msg  LoadCarrier.msg  LoadCarrierModel.msg  LoadCarrierWithFillingLevel.msg  Match.msg  RegionOfInterest2D.msg  RegionOfInterest3D.msg  SilhouetteMatchInstance.msg  SuctionGrasp.msg  TexturedBox.msg
rc_reason_msgs/srv/: CadMatchDetectObject.srv  CalibrateBasePlane.srv  ComputeGrasps.srv  DeleteRegionsOfInterest2D.srv  DeleteRegionsOfInterest3D.srv  DetectFillingLevel.srv  DetectItems.srv  DetectLoadCarriers.srv  DetectTags.srv  GetBasePlaneCalibration.srv  GetLoadCarriers.srv  GetRegionsOfInterest2D.srv  GetRegionsOfInterest3D.srv  HandEyeCalibration.srv  SetHandEyeCalibrationPose.srv  SetLoadCarrier.srv  SetRegionOfInterest2D.srv  SetRegionOfInterest3D.srv  SilhouetteMatchDetectObject.srv  WarmupTemplate.srv
