<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rc_reason_clients</name>
  <version>0.3.0</version>
  <description>Clients for interfacing with Roboception reason modules on rc_visard and rc_cube.</description>
  <maintainer email="felix.ruess@roboception.de">ruess</maintainer>
  <license>BSD</license>

  <depend>rclpy</depend>
  <depend>ros2pkg</depend>
  <depend>python3-requests</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>rc_reason_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
